app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: quarkus-build
    app.kubernetes.io/component: quarkus-build
    app.kubernetes.io/instance: quarkus-build
    app.kubernetes.io/name: quarkus-build
    app.kubernetes.io/part-of: quarkus-build
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: quarkus-build
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus-build
  template:
    metadata:
      labels:
        app: quarkus-build
    spec:
      containers:
      - name: quarkus-build
        imagePullPolicy: Always
        image: >-
            image-registry.openshift-image-registry.svc:5000/tekton-quarkus/quarkus-build:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
