app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-build
  name: quarkus-build
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-build
    weight: 100
